[package]
name = "checkin-label"
version = "0.1.0"
authors = ["Ryan Petschek <petschekr@gmail.com>"]
edition = "2018"

[dependencies]
brother-ql-rs = "0.1.1"
hackgt-nfc = "0.3.4"
websocket = "0.22.3"
libusb = "0.3.0"
serde_json = "1.0.39"
crossbeam-channel = "0.3"

[patch.crates-io]
hackgt-nfc = { path = "../hackgt-nfc" }
brother-ql-rs = { path = "../brother-ql-rs" }
