[package]
name = "checkin-label"
version = "0.1.0"
authors = ["Ryan Petschek <petschekr@gmail.com>"]
edition = "2018"

[dependencies]
brother-ql-rs = "0.2.1"
hackgt-nfc = "0.4.2"
rocket = "0.4"
serde = "1.0.104"
rusb = "0.7.0"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "serve", "handlebars_templates"]

# [patch.crates-io]
# brother-ql-rs = { path = "../brother-ql-rs" }
# hackgt-nfc = { path = "../hackgt-nfc" }
